# game-engine

./: .gitignore  CMakeLists.txt  FragmentShaderLoader.cpp  FragmentShaderLoader.h  README.md  ShaderLoader.h  ShaderLoaderFactory.cpp  ShaderLoaderFactory.h  UnsupportedSource.cpp  UnsupportedSource.h  VertexShaderLoader.cpp  VertexShaderLoader.h  createBuffers.cpp  createBuffers.h  glRules.cpp  glRules.h  libs.h  main.cpp  renderLoop.cpp  renderLoop.h  runFrame.cpp  runFrame.h
shaders/fragment/: fragment_core.frag
shaders/vertex/: vertex_core.vert
